<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ProgressBar
            android:id="@+id/pb_indeterminate"
            style="@style/ProgressBarIndeterminate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="-8.0dip"
            android:layout_marginTop="-6.0dip"
            android:visibility="visible" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_removeSelectMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RemoveSelectItem" />

        <Button
            android:id="@+id/bt_clearTheMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ClearTheMap" />

        <Button
            android:id="@+id/bt_putKeyAndValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PutKeyAndValue" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Key:" />

                <EditText
                    android:id="@+id/itemKey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:minEms="5"
                    android:padding="@dimen/contentDim" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Value:" />

                <EditText
                    android:id="@+id/itemValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:minEms="5"
                    android:padding="@dimen/contentDim" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Keys"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="Values"
                android:textSize="12sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/CollaborativeMap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/style_list_background"
            android:divider="#000000"
            android:dividerHeight="1dp" />
    </LinearLayout>

</FrameLayout>